--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "Discord-Bot-Token-goes-here!",
-  "prefix": "k!",
+  "token": "ODg3OTc4Mzc0ODg1MTU4OTEy.YUMATg.sAV3-NVXENmMIupfNV_ISkjKKMo",
+  "prefix": "!",
   "ksoftapi": "NEEDED_FOR_LYRICS",
   "youtubeCookie": "",
   "spotify_api": {
